--- a/src/app/employee/components/update-employee/update-employee.component.html
+++ b/src/app/employee/components/update-employee/update-employee.component.html
@@ -1,17 +1,17 @@
 <div class="col-md-6 offset-md-3">
   <h3>Update Employee</h3>
-  <form (ngSubmit)="onSubmit()">
+  <form (ngSubmit)="onSubmit()" [formGroup]="formGroup">
     <div class="form-group">
       <label>First Name</label>
-      <input type="text" class="form-control" id="firstName" [(ngModel)]="employee.firstName" name="firstName">
+      <input type="text" class="form-control" formControlName="firstName" name="firstName">
     </div>
     <div class="form-group">
       <label>Last Name</label>
-      <input type="text" class="form-control" id="lastName" [(ngModel)]="employee.lastName" name="lastName">
+      <input type="text" class="form-control" formControlName="lastName" name="lastName">
     </div>
     <div class="form-group">
       <label>Email Id</label>
-      <input type="text" class="form-control" id="emailId" [(ngModel)]="employee.emailId" name="emailId">
+      <input type="text" class="form-control" formControlName="emailId" name="emailId">
     </div>
     <button class="btn btn-success" type="submit">Submit</button>
   </form>
