Add history module to store changes in CRUD

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
     <li class="nav-item">
       <a routerLink="create-employee" routerLinkActive="active" class="nav-link">Add Employee</a>
     </li>
+    <li class="nav-item">
+      <a routerLink="history-list" routerLinkActive="active" class="nav-link">History List</a>
+    </li>
   </ul>
 </nav>
 <h1 class="text-center">{{title}}</h1>
